add party service
